# Arq-Comp-G14

./: .clang-tidy  CMakeLists.txt  RN_UC3M_2324_P2P1.ipynb  c.clang-format  grid_test.cpp  main.cpp  out.fld  progars_test.cpp
comandos_avigon/: dcomp.sh  drun.sh  energia.sh  rcomp.sh  runner_r.sh
fluid/: CMakeLists.txt  fluid.cpp  particle.cpp  particle.hpp
ftest/: CMakeLists.txt  functional_test.cpp
sim/: Block.cpp  Block.hpp  CMakeLists.txt  Grid.cpp  Grid.hpp  block.cpp  block.hpp  constants.hpp  grid.cpp  grid.hpp  h_y_m_struct.hpp  particle.cpp  particle.hpp  progargs.cpp  progargs.hpp  setter.hpp  vec_block.cpp  vec_block.hpp  vec_grid.cpp  vec_grid.hpp
sim/v2_optimizaciones/: vec_block.cpp  vec_block.hpp  vec_grid.cpp  vec_grid.hpp
utest/: CMakeLists.txt  block_test.cpp  grid_test.cpp  progargs_test.cpp
utest/gtest/: gtest-printers.h
utest/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h
